Fixes #1410: On clicking Cancel on the Confirm Subject Details page, the page is broken. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1691 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -869,9 +869,9 @@
         <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>UpdateSubjectServlet</servlet-name>
+        <servlet-name>updateSubjectServlet</servlet-name>
         <display-name>UpdateSubject</display-name>
-        <servlet-class>org.akaza.openclinica.control.admin.UpdateSubjectServlet</servlet-class>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>viewStudyServlet</servlet-name>
@@ -1857,7 +1857,7 @@
         <url-pattern>/ListSubject</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>UpdateSubjectServlet</servlet-name>
+        <servlet-name>updateSubjectServlet</servlet-name>
         <url-pattern>/UpdateSubject</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
