Refs #1506: Remove problems in core tests. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1995 14881f01-568e-124b-961a-bb94932aa8d1

--- a/ws/pom.xml
+++ b/ws/pom.xml
@@ -16,6 +16,10 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>org.apache.ws.commons.schema</groupId>
+            <artifactId>XmlSchema</artifactId>
+        </dependency>
     	<dependency>
             <groupId>com.clinovo.clincapture</groupId>
             <artifactId>core</artifactId>
